--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "scripts": {
     "start": "node server.js", 
     "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5"
   }
 }
