--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "main": "server.js",
   "scripts": {
-    "start": "node server.js", 
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "mongoose": "^5.10.9",
+    "helmet": "^4.4.1"
   }
 }
