--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-rate-limit": "7.5.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "mongoose": "^5.10.9",
-    "helmet": "^4.4.1"
+    "helmet": "^4.4.1",
+    "bcrypt": "^5.0.1",
+    "jwt": "^2.2.0",
+    "express-validator": "7.2.1"
   }
 }
