--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "express-rate-limit": "7.5.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "mongoose": "^5.10.9",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "express-rate-limit": "7.5.1",
+    "express-validator": "7.2.1",
     "helmet": "^4.4.1",
-    "bcrypt": "^5.0.1",
-    "jwt": "^2.2.0",
-    "express-validator": "7.2.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.1"
   }
 }
