--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "7.2.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1"
+    "mongoose": "^8.16.1",
+    "bcryptjs": "^2.4.3"
   }
 }
