--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -14,7 +15,6 @@
     "express-validator": "7.2.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1",
-    "bcryptjs": "^2.4.3"
+    "mongoose": "^8.16.1"
   }
 }
