--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "7.2.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1"
+    "mongoose": "^8.16.1",
+    "node-fetch": "^3.3.2"
   }
 }
