--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -15,7 +16,6 @@
     "express-validator": "7.2.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1",
-    "node-fetch": "^3.3.2"
+    "mongoose": "^8.16.1"
   }
 }
