--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
