--- a/package.json
+++ b/package.json
@@ -18,9 +18,22 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
-    "node-fetch": "^2.7.0"
+    "node-cron": "^3.0.3",
+    "node-fetch": "^2.7.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "@types/jest": "^29.5.8",
+    "mongodb-memory-server": "^9.1.3"
+  },
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   }
 }
