--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,56 @@
-.env
+# Node.js dependencies
 node_modules/
+
+# Environment variables
+.env
+.env.*
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test coverage
+coverage/
+
+# Build artifacts
+build/
+dist/
+*.tsbuildinfo
+
+# PM2 process files
+pids/
+pidfiles/
+*.pid
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Editor directories and files
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Llama.cpp binaries and models
+llama.cpp/build/
+llama.cpp/models/
+llama.cpp/*.bin
+llama.cpp/*.gguf
+llama.cpp/*.ggml
+llama.cpp/*.exe
+llama.cpp/*.dll
+llama.cpp/*.so
+llama.cpp/*.dylib
+
+# Python virtual environments
+venv/
+.venv/
+
+# Misc
 .claude/
 .md/
 .md
