--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "test:watch": "node --experimental-vm-modules node_modules/.bin/jest --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage"
   },
   "dependencies": {
     "axios": "^1.10.0",
@@ -23,17 +26,13 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
     "@types/jest": "^29.5.8",
-    "mongodb-memory-server": "^9.1.3"
-  },
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "babel-jest": "^30.0.4",
+    "jest": "^30.0.4",
+    "mongodb-memory-server": "^9.1.3",
+    "nodemon": "^3.1.10",
+    "supertest": "^6.3.3"
   }
 }
