--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "express": "^4.21.2",
     "express-rate-limit": "7.5.1",
     "express-validator": "7.2.1",
+    "firebase-admin": "^13.4.0",
     "helmet": "^4.4.1",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "node-cron": "^3.0.3",
+    "redis": "^5.6.0",
+    "socket.io": "^4.8.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
