--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "dev": "nodemon src/server.js",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "test:watch": "node --experimental-vm-modules node_modules/.bin/jest --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage"
+    "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
+    "seed-test-data": "node scripts/seedTestData.js",
+    "test-api": "node scripts/testAPI.js",
+    "test-websocket": "node scripts/testWebSocket.js"
   },
   "dependencies": {
     "axios": "^1.10.0",
@@ -29,6 +32,7 @@
     "node-cron": "^3.0.3",
     "redis": "^5.6.0",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
