--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redis": "^5.6.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "stripe": "^18.3.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
