--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "test:watch": "node --experimental-vm-modules node_modules/.bin/jest --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
+    "test:e2e": "node tests/scripts/runE2EWithMetrics.js",
+    "test:monitor": "node tests/scripts/continuousMonitoring.js",
     "seed-test-data": "node scripts/seedTestData.js",
     "test-api": "node scripts/testAPI.js",
     "test-websocket": "node scripts/testWebSocket.js",
@@ -25,13 +27,16 @@
     "express": "^4.21.2",
     "express-rate-limit": "7.5.1",
     "express-validator": "7.2.1",
+    "file-type": "^21.0.0",
     "firebase-admin": "^13.4.0",
     "helmet": "^4.4.1",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "multer": "^2.0.1",
     "node-cron": "^3.0.3",
     "redis": "^5.6.0",
+    "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stripe": "^18.3.0",
