--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "seed-test-data": "node scripts/seedTestData.js",
     "test-api": "node scripts/testAPI.js",
     "test-websocket": "node scripts/testWebSocket.js",
-    "test-numina-senses": "node scripts/testNuminaSenses.js"
+    "test-numina-senses": "node scripts/testNuminaSenses.js",
+    "lint": "eslint src/ --quiet",
+    "lint:errors": "eslint src/ tests/ --quiet --max-warnings 0"
   },
   "dependencies": {
     "axios": "^1.10.0",
@@ -45,11 +47,16 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
+    "@eslint/js": "^9.31.0",
     "@types/jest": "^29.5.8",
     "babel-jest": "^30.0.4",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "jest": "^30.0.4",
     "mongodb-memory-server": "^9.1.3",
     "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
     "supertest": "^6.3.3"
   }
 }
