--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
-    "body-parser": "^1.19.0",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -37,7 +36,8 @@
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
     "node-cron": "^3.0.3",
-    "redis": "^5.6.0",
+    "nodemailer": "^7.0.5",
+    "resend": "^4.7.0",
     "sharp": "^0.34.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
