--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lint:errors": "eslint src/ tests/ --quiet --max-warnings 0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.848.0",
+    "@aws-sdk/lib-storage": "^3.848.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.0",
