feat(analytics): Implement advanced AI profiling and refactor core services
This commit introduces a major evolution of the analytics system from basic insights to a sophisticated psychological profiling engine and performs significant code cleanup.

- **feat(analytics):** Adds new endpoints for advanced analysis, including `/advanced-profiling` for deep psychological assessments and `/real-time-insights` for live emotional state monitoring. Expands analytics categories to cover cognitive patterns, predictive behavior, and resilience.

- **refactor(emotions):** Completely removes the entire legacy manual emotion logging system. Deletes all associated routes (`/emotions`, `/emotionHistory`, etc.), the `EmotionalAnalyticsSession` model, and cleans up all remaining references throughout the codebase to streamline the system around chat-based AI analysis.

- **chore(performance):** Deletes numerous unused test/debug routes and consolidates duplicate cache services to improve performance, security, and maintainability. Adds critical database indexes to optimize query performance for core models.

- **fix(server):** Resolves multiple bugs discovered during comprehensive testing, including issues with the analytics cooldown logic, incorrect LLM service method calls, duplicate module imports, and improper endpoint routing prefixes.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test-api": "node scripts/testAPI.js",
     "test-websocket": "node scripts/testWebSocket.js",
     "test-numina-senses": "node scripts/testNuminaSenses.js",
+    "optimize-db": "node scripts/optimizeDatabase.js",
+    "test-performance": "node scripts/performanceTest.js",
+    "test-optimizations": "node scripts/testOptimizations.js",
     "lint": "eslint src/ --quiet",
     "lint:errors": "eslint src/ tests/ --quiet --max-warnings 0"
   },
