🚀 Clean Aether Social Chat Server
- Removed complex AI services (UBPM, cognitive engines, analytics)
- Stripped subscription, email, and WebSocket services
- Created clean server-clean.js with direct OpenRouter integration
- Working endpoints: /social-chat, /auth, /health
- Ready for Render deployment with optimized performance

✅ All tests passing - OpenRouter connected, auth working, DB stable

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "main": "src/server.js",
+  "main": "src/server-clean.js",
   "type": "module",
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node src/server-clean.js",
+    "dev": "nodemon src/server-clean.js",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "test:watch": "node --experimental-vm-modules node_modules/.bin/jest --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
